test/conformance/chainsaw/validate/clusterpolicy/standard/cel-deprecated/authorizor-checks/without-permissions/serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: test-account-1
  namespace: default
