test/conformance/chainsaw/validate/clusterpolicy/standard/cel-deprecated/authorizor-checks/without-permissions/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: without-permissions
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: serviceaccount.yaml
  - name: step-02
    try:
    - apply:
        file: rbac.yaml
  - name: step-03
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy.yaml
  - name: step-04
    try:
    - script:
        content: "if kubectl apply -f ./deployment.yaml --as=system:serviceaccount:default:test-account-1\nthen\n
          \ echo \"Test failed. Deployment shouldn't be created.\"\n  exit 1\nelse
          \n  echo \"Test succeeded. Deployment isn't created as expected.\"\n  exit
          0\nfi\n"
